fixed overlapping css class names

--- a/src/components/Song/Song.css
+++ b/src/components/Song/Song.css
@@ -1,4 +1,4 @@
-.song-container {
+.current-song {
   grid-area: song;
   display: flex;
   flex-direction: column;
